<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">My Prayer Times</string>
    <string name="action_settings">Settings</string>
    <string name="empty_prayer_list">No prayer information is available. Go to settings->location settings to set it manually</string>
    <string name="no_network_available">No prayer information due to network disabled, please enable network</string>
    <string name="invalid_location">No prayer information because the location you entered is invalid</string>
    <string name="permission_denied">No prayer information because you denied location access, please enable</string>
    <string name="disabled_location">No prayer information because your location settings is disabled. Either enable it from your phone settings or from the application settings: Choose location settings and then press on the target image beside "Use current location".</string>
    <string name="pref_location_longitude">location-long</string>
    <string name="pref_location_latitude">location-lat</string>
    <string name="pref_location_key">location</string>
    <string name="service_not_available">location service not available</string>
    <string name="invalid_lat_long_used">invalide longitude and latitude</string>
    <string name="no_addresses_found">no addresses found</string>
    <string name="address_found">address found</string>
    <string name="pref_location_default"> </string>
    <string name="pref_time_format_key">time-format</string>
    <string name="title_activity_compass">Compass</string>
    <string name="title_activity_settings">Settings</string>
    <string name="compass_image">Compass Dial</string>
    <string name="compass_arrow">Compass Arrow</string>
    <string name="compass_instructions">To calibrate the compass, wave your phone in the shape of letter 8 before using.</string>
    <string name="image_masjid">Masjid image</string>
    <string name="title_not_supported">Your device does not support the compass</string>
    <string name="press_on_circle">Press on adjacent circle to retrieve current location</string>
    <string name="error_retrieving_picker">Could not locate your device</string>


    <!-- Strings related to Settings -->

    <string name="pref_header_calculation">Calculation Method Setting</string>

    <string name="pref_title_hour_calculation">24 hour display</string>
    <string name="pref_description_hour_calculation">"13:00" or "1:00 PM"</string>

    <string name="pref_title_high_alt">High Altitude</string>
    <string name="pref_description_high_alt">Turn it on for high altitudes only</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_loc_manual_set">loc-manual</string>
    <string name="pref_loc_manual">Setting the location manually</string>
    <string name="pref_location_key_manual">location-manual</string>
    <string name="pref_location_latitude_manual">lat-manual</string>
    <string name="pref_location_longitude_manual">long-manual</string>
    <string name="ok">O.K</string>
    <string name="automatic_location_disabled">Cannot retrieve automatic location</string>
    <string name="location_not_valid">Location not valid</string>

    <!--hijri date adjustment-->
    <string name="pref_title_hijri_adj">Hijri Date Adjustment</string>
    <!--asr calculation-->
    <string name="pref_title_asr_calculation">Asr Calculation Method</string>
    <!--language-->
    <string name="pref_title_language_calculation">Display Language</string>
    <!--DST adjustment-->
    <string name="pref_title_dst">Daylight Saving Adjustment</string>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_prayer_notifications">Prayer notifications</string>

    <string name="pref_title_ringtone">Notification Sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!--<string name="pref_alarm_enabled">alarm-enabled</string>-->
    <string name="pref_alarm_initiated">alarm-initated</string>

    <!--Enable watch settings-->
    <string name="pref_enable_watch_key">enable_watch_key</string>
    <string name="pref_description_watch_switch">Enable or disable watch connection</string>
    <string name="pref_title_enable_watch">Enable watch connection</string>

    <string name="pref_current_location_desc">Use my current location</string>
    <!-- For Google Places API Attributions -->
    <string name="attribution_text">Powered by Google</string>
    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>
    <string name="pref_header_location">Location Settings</string>
    <string name="pref_asr_calculation_key">asr_calculation</string>
    <string name="pref_dst_value">dst_value</string>
    <string name="pref_hijri_date_adj">date_adjustment</string>
    <string name="pref_high_alt_key">high_alt</string>
    <string name="pref_title_high_alt_method">High altitude calculation method</string>
    <string name="pref_high_alt_switch">high_alt_switch</string>
    <string name="pref_language_list_key">language_list</string>
    <string name="pref_calculation_methods_key">calc_method</string>
    <string name="pref_title_calculation_methods">Prayer Calculation Method</string>
    <string name="pref_vibrate_key">vibrate</string>
    <string name="pref_notification_ringtone_key">ringtone</string>
    <string name="pref_prayer_offsets">prayer_offsets</string>
    <string name="pref_notification_key">notification_key</string>
    <string name="pref_notification_enable_summary">Enable or disable notifications</string>
    <string name="pref_vibrate_summary">Set vibration on or off</string>
    <string name="widget_pref_title">Widget Settings</string>
    <string name="pref_widget_setting_key">widget_setting_key</string>
    <string name="widget_pref_color_key">widget_color_key</string>
    <string name="pref_title_widget_color">Widget text color</string>
    <string name="pref_header_watch_widget">Watch and Widget settings</string>
    <string name="pref_title_widget_bg_color">Widget Background Color</string>
    <string name="widget_pref_bg_key">widget_bg_key</string>
    <string name="pref_widget_transparency_key">widget_transprency_key</string>
    <string name="pref_widget_transparency_title">Widget background color transparency</string>
    <string name="pref_next_prayer">next_prayer</string>
    <string name="pref_location_status_key">loc_status_key</string>
    <string name="pref_next_prayer_time">next_prayer_time</string>
    <string name="pref_watch_setting_key">watch_settings_key</string>
    <string name="watch_pref_title">Watch Settings</string>
    <string name="pref_show_hijri_switch_key">show_hijri_key</string>
    <string name="pref_description_hijri_switch">Show or hide Hijri date on watch</string>
    <string name="pref_title_show_hijri">Show Hijri Date</string>
    <string name="pref_twentyfour_switch_key">twentyfour_key</string>
    <string name="pref_twentyfour_switch">1:00 PM or 13:00</string>
    <string name="pref_title_twentyfour">24 hour method</string>
    <string name="watch_pref_bg_key">watch_pref_bg_key</string>
    <string name="pref_title_watch_bg_color">Watch Background Color</string>
    <string name="watch_pref_bg_color">Change watch background color</string>

    <string name="use_current_location">Use current location</string>
    <string name="compass_button_description">Compass</string>
    <string name="offset_prayers_title">Edit prayer times in minutes</string>
    <string name="adjust_prayer_times">manual change to prayer times</string>
    <string name="zero">0</string>
    <string name="cancel">No</string>
    <string name="enable">Yes</string>
    <string name="gps_network_not_enabled">We cannot retrieve your location because your locations setting is disabled, do you want to enable it?</string>
    <string name="location_not_found">Location not found</string>
    <string name="loading_location">LOADING YOUR LOCATION, PLEASE WAIT</string>
    <string name="qibla_direction">Qibla Direction</string>
    <string name="format_qibla_dir"><xliff:g id="degree">%1.0f</xliff:g>\u00B0</string>
    <string name="format_heading"><xliff:g id="hdegree">%1.0f</xliff:g>\u00B0</string>
    <string name="title_no_device_connected">No wearable device is currently connected.</string>
    <string name="ok_no_device_connected">OK</string>
    <string name="digital_config_background">Background</string>
    <string name="digital_config_text">Digital watch face configuration</string>
    <string name="invalid_time">invalid</string>

    <string name="notification_sound">Notification sound</string>
    <string name="allahakbar">Allahu Akbar two times</string>
    <string name="adhan1">Adhan Egypt</string>
    <string name="adhan2">Adhan Mecca</string>
    <string name="nosound">No sound</string>
    <string name="pref_fajr_notification_methods_key">fajr_notification_key</string>
    <string name="pref_fajr_title_notification_methods">Fajr notification method</string>
    <string name="pref_dhuhr_notification_methods_key">dhuhr_notification_key</string>
    <string name="pref_dhuhr_title_notification_methods">Dhuhr notification method</string>
    <string name="pref_asr_title_notification_methods">Asr notification method</string>
    <string name="pref_asr_notification_methods_key">asr_notification_key</string>
    <string name="pref_maghrib_notification_methods_key">maghrib_notification_key</string>
    <string name="pref_maghrib_title_notification_methods">Maghrib notification method</string>
    <string name="pref_isha_notification_methods_key">isha_notification_key</string>
    <string name="pref_isha_title_notification_methods">Isha notification method</string>

    <!--translatable strings-->
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="jumuah">Jumuah</string>
    <!-- strings related to hijri months names-->
    <string name="muharam">Muharam</string>
    <string name="safar">Safar</string>
    <string name="rabee31">Rabea Al Awal</string>
    <string name="rabee32">Rabea Al Thani</string>
    <string name="jumada1">Jumada Al Awal</string>
    <string name="jumada2">Jumada Al Thani</string>
    <string name="rajab">Rajab</string>
    <string name="shaban">Shaban</string>
    <string name="ramadan">Ramadan</string>
    <string name="shawal">Shawal</string>
    <string name="dhulqe3da">Dhu-l Qida</string>
    <string name="dhulhija">Dhu-l Hija</string>
    <string name="appwidget_text">LOADING...</string>
    <string name="add_widget">Add widget</string>

    

</resources>
