<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_notification_key"
        android:summary="@string/pref_notification_enable_summary"
        android:title="@string/pref_title_prayer_notifications" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_notification_method_titles"
        android:entryValues="@array/pref_notification_method_values"
        android:key="@string/pref_fajr_notification_methods_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_fajr_title_notification_methods" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_notification_method_titles"
        android:entryValues="@array/pref_notification_method_values"
        android:key="@string/pref_dhuhr_notification_methods_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_dhuhr_title_notification_methods" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_notification_method_titles"
        android:entryValues="@array/pref_notification_method_values"
        android:key="@string/pref_asr_notification_methods_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_asr_title_notification_methods" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_notification_method_titles"
        android:entryValues="@array/pref_notification_method_values"
        android:key="@string/pref_maghrib_notification_methods_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_maghrib_title_notification_methods" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_notification_method_titles"
        android:entryValues="@array/pref_notification_method_values"
        android:key="@string/pref_isha_notification_methods_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_isha_title_notification_methods" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="@string/pref_notification_key"
        android:key="@string/pref_notification_ringtone_key"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="@string/pref_notification_key"
        android:key="@string/pref_vibrate_key"
        android:summary="@string/pref_vibrate_summary"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
