<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_time_format_key"
        android:summary="@string/pref_description_hour_calculation"
        android:title="@string/pref_title_hour_calculation" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_calc_method_titles"
        android:entryValues="@array/pref_calc_method_values"
        android:key="@string/pref_calculation_methods_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_calculation_methods" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_asr_list_titles"
        android:entryValues="@array/pref_asr_list_values"
        android:key="@string/pref_asr_calculation_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_asr_calculation" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_dst_list_titles"
        android:entryValues="@array/pref_dst_list_values"
        android:key="@string/pref_dst_value"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_dst" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_hijri_list_titles"
        android:entryValues="@array/pref_hijri_list_values"
        android:key="@string/pref_hijri_date_adj"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_hijri_adj" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_language_list_titles"
        android:entryValues="@array/pref_language_list_values"
        android:key="@string/pref_language_list_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_language_calculation" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_high_alt_switch"
        android:summary="@string/pref_description_high_alt"
        android:title="@string/pref_title_high_alt" />

    <ListPreference
        android:defaultValue="0"
        android:dependency="@string/pref_high_alt_switch"
        android:entries="@array/pref_high_alt_titles"
        android:entryValues="@array/pref_high_alt_values"
        android:key="@string/pref_high_alt_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_high_alt_method"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


</PreferenceScreen>
