<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.sommayah.myprayertimes.SettingsActivity$LocationPreferenceFragment"
        android:icon="@drawable/ic_place_24dp"
        android:title="@string/pref_header_location" />

    <header
        android:fragment="com.sommayah.myprayertimes.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_calculation" />

    <header
        android:fragment="com.sommayah.myprayertimes.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.sommayah.myprayertimes.SettingsActivity$WatchWidgetPreferenceFragment"
        android:icon="@drawable/ic_watch_24dp"
        android:title="@string/pref_header_watch_widget" />

</preference-headers>
